--- a/index.htm
+++ b/index.htm
@@ -153,11 +153,13 @@ y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
        </p>
      </div>
    </div>
-   <div class="mt-4 md:absolute md:bottom-10 left-1/2 transform -translate-x-1/2">
-     <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white animate-bounce" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3" />
-     </svg>
-   </div>
+   <div class="w-full flex justify-center">
+    <div class="mt-4 md:absolute md:bottom-10 animate-bounce">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3" />
+      </svg>
+    </div>
+  </div>
 </section>
 
 <section id="about" class="py-20 gradient-bg-2">
