--- a/index.htm
+++ b/index.htm
@@ -38,54 +38,54 @@ h1, h2, h3, h4, h5, h6 {
 .gradient-bg-10 { background: linear-gradient(to bottom, #ff1c7f, #ff3e4d); }
 .gradient-bg-11 { background: linear-gradient(to bottom, #ff3e4d, #ff6533); }
 .project-card {
-    transition: transform 0.3s ease-in-out;
+   transition: transform 0.3s ease-in-out;
 }
 .project-card:hover {
-    transform: scale(1.05);
-    transition: transform 0.5s ease-in-out;
+  transform: scale(1.05);
+  transition: transform 0.5s ease-in-out;
 }
 .lightbox {
-    display: none;
-    position: fixed;
-    z-index: 999;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0,0,0,0.8);
-    justify-content: center;
-    align-items: center;
+   display: none;
+   position: fixed;
+   z-index: 999;
+   top: 0;
+   left: 0;
+   right: 0;
+   bottom: 0;
+   background: rgba(0,0,0,0.8);
+   justify-content: center;
+   align-items: center;
 }
 .lightbox-content {
-    max-width: 90%;
-    max-height: 90%;
+   max-width: 90%;
+   max-height: 90%;
 }
 .lightbox-content img {
-    max-width: 100%;
-    max-height: 90vh;
-    object-fit: contain;
+   max-width: 100%;
+   max-height: 90vh;
+   object-fit: contain;
 }
 .close-lightbox {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    color: #fff;
-    font-size: 30px;
-    cursor: pointer;
+   position: absolute;
+   top: 20px;
+   right: 20px;
+   color: #fff;
+   font-size: 30px;
+   cursor: pointer;
 }
 .mobile-menu {
-    text-align: right;
-    width: auto;
-    max-width: 90vw;
-    padding-right: 1rem;
-    padding-left: 1rem;
-    background-color: rgba(255, 255, 255, 0.9);
-    backdrop-filter: blur(5px);
+  text-align: right;
+  width: auto;
+  max-width: 90vw;
+  padding-right: 1rem;
+  padding-left: 1rem;
+  background-color: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(5px);
 }
 .container {
-    width: 100%;
-    max-width: 100%;
-    overflow-x: hidden;
+   width: 100%;
+   max-width: 100%;
+   overflow-x: hidden;
 }
 </style>
 <!-- Favicon -->
@@ -132,28 +132,28 @@ y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
 </ul>
 </nav>
 </header>
-<main class="pt-16 overflow-x-hidden"> <!-- Added overflow-x-hidden -->
+<main class="pt-16 overflow-x-hidden">
 <section id="hero" class="min-h-screen flex flex-col items-center justify-start pt-16 md:justify-center relative gradient-bg-1">
-   <div class="text-center mb-8 md:mb-12">
-       <h1 class="text-4xl font-bold text-white mb-2">Kevin Middleton</h1>
-       <p class="text-xl text-white">Full Stack Product Manager</p>
-       <div class="location">📍 New York City</div>
-   </div>
-   <div class="text-center z-10 px-4 md:px-0">
-     <div class="flex justify-center space-x-4 items-center mb-8">
-       <a href="#experience" class="inline-flex items-center justify-center bg-white text-[#00a8ff] px-6 py-3 rounded-full hover:bg-gray-200 transition-colors">See My Work</a>
-       <a href="#about" class="inline-flex items-center justify-center bg-transparent text-white border-2 border-white px-6 py-3 rounded-full hover:bg-white hover:text-[#00a8ff] transition-colors">About Me</a>
-     </div>
-     <div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-4 sm:p-6 md:p-8 mb-12">
-       <h2 class="text-lg sm:text-xl md:text-2xl lg:text-3xl font-bold mb-4 sm:mb-6 text-center text-white">
-         <span class="inline-block whitespace-nowrap text-[clamp(0.875rem,2vw,1.875rem)]">Building Consumer, Enterprise, and Platform SaaS Products</span>
-       </h2>
-       <p class="text-sm sm:text-base md:text-lg text-white leading-relaxed">
-         With 10+ years of experience driving product strategies, I turn complex challenges into scalable, data-driven solutions. My work spans diverse industries—social media, legal tech, marketing tech, HR, EdTech, and HVAC—delivering measurable growth and product success.
-       </p>
-     </div>
-   </div>
-   <div class="w-full flex justify-center">
+  <div class="text-center mb-8 md:mb-12">
+      <h1 class="text-4xl font-bold text-white mb-2">Kevin Middleton</h1>
+      <p class="text-xl text-white">Full Stack Product Manager</p>
+      <div class="location">📍 New York City</div>
+  </div>
+  <div class="text-center z-10 px-4 md:px-0">
+    <div class="flex justify-center space-x-4 items-center mb-8">
+      <a href="#experience" class="inline-flex items-center justify-center bg-white text-[#00a8ff] px-6 py-3 rounded-full hover:bg-gray-200 transition-colors">See My Work</a>
+      <a href="#about" class="inline-flex items-center justify-center bg-transparent text-white border-2 border-white px-6 py-3 rounded-full hover:bg-white hover:text-[#00a8ff] transition-colors">About Me</a>
+    </div>
+    <div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-4 sm:p-6 md:p-8 mb-12">
+      <h2 class="text-lg sm:text-xl md:text-2xl lg:text-3xl font-bold mb-4 sm:mb-6 text-center text-white">
+        <span class="inline-block whitespace-nowrap text-[clamp(0.875rem,2vw,1.875rem)]">Building Consumer, Enterprise, and Platform SaaS Products</span>
+      </h2>
+      <p class="text-sm sm:text-base md:text-lg text-white leading-relaxed">
+        With 10+ years of experience driving product strategies, I turn complex challenges into scalable, data-driven solutions. My work spans diverse industries—social media, legal tech, marketing tech, HR, EdTech, and HVAC—delivering measurable growth and product success.
+      </p>
+    </div>
+  </div>
+  <div class="w-full flex justify-center">
     <div class="mt-4 md:absolute md:bottom-10 animate-bounce">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3" />
@@ -212,7 +212,7 @@ HVAC.COM
 <li><span class="font-semibold">Landing Pages:</span> Optimized landing pages to achieve a <strong>2.3% conversion rate</strong> to paid products.</li>
 </ul>
 <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mt-4">
-<img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Calculators-ugatTWPQjMXKJgaVhpaFvInZcvUTnG.png"   alt="HVAC.COM Calculators" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
+<img  src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Calculators-ugatTWPQjMXKJgaVhpaFvInZcvUTnG.png"   alt="HVAC.COM Calculators" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/QuoteScore%20Landing%20Page-uuM6LcirnsW3dgC9uZ7IvQCkaH4o6t.png" alt="HVAC.COM QuoteScore Landing Page" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/video-CMzSXsw2YKljtBUuFMmwnpd5Vmbk7s.png" alt="HVAC.COM Video Content" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Replace%20Landing%20Page-3KAGV2Ct1GLuZUDCvnSCoy2zNnGaxf.png" alt="HVAC.COM Replace Landing Page" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
@@ -414,7 +414,7 @@ ORACLE
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Rocket%20Lawyer-rp4YsC8U09zO3ssfG9J781arqsI8gY.png" alt="Rocket Lawyer logo" class="w-full h-48 object-cover">
 <a href="https://middleton.io/rocketlawyer/" target="_blank" rel="noopener noreferrer" class="block p-6">
 <h3 class="text-xl font-bold mb-2 text-gray-800">Co-Branded Partner Sites</h3>
-<p class="text-gray-600 mb-4">Led the creation and launch of co-branded partner sites for Rocket Lawyer, integrating OpenID Connect authentication with customizable pricing, content, and features. This project accounted for <strong>16% of European traffic</strong> and opened a new revenue channel.</p>
+<p class="text-gray-600 mb-4">Led the creation and launch of co-branded partner sites for Rocket Lawyer, integrating OpenID Connect authentication with customizable pricing, content, and features. This project accounte d for <strong>16% of European traffic</strong> and opened a new revenue channel.</p>
 <div class="flex flex-wrap">
 <span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Growth</span>
 <span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Partnerships</span>
@@ -524,7 +524,7 @@ ORACLE
 </div>
 </section>
 
-<section id="skills" class="py-20 gradient-bg-6">
+<section id="skills" class="py-20 bg-gradient-to-b from-purple-600 to-indigo-700">
 <div class="container mx-auto px-4">
 <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-white">Skills &amp; Expertise</h2>
 <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
@@ -535,14 +535,14 @@ ORACLE
 </svg>
 Strategic
 </h3>
-<ul class="list-disc list-inside text-gray-600 space-y-2">
-<li>Product Strategy</li>
-<li>Product Roadmap &amp; Vision</li>
-<li>Competitive Analysis</li>
-<li>eCommerce &amp; Marketplace Strategy</li>
-<li>B2B</li>
-<li>Customer Success</li>
-</ul>
+<div class="flex flex-wrap gap-2">
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Product Strategy</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Product Roadmap &amp; Vision</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Competitive Analysis</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">eCommerce &amp; Marketplace Strategy</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">B2B</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Customer Success</span>
+</div>
 </div>
 <div class="bg-white rounded-lg shadow-xl p-6">
 <h3 class="text-xl font-semibold text-gray-800 mb-4 flex items-center">
@@ -551,13 +551,13 @@ Strategic
 </svg>
 Leadership
 </h3>
-<ul class="list-disc list-inside text-gray-600 space-y-2">
-<li>Cross-Functional Leadership</li>
-<li>Stakeholder Management</li>
-<li>Team Building</li>
-<li>Mentorship</li>
-<li>Agile (Scrum, Kanban)</li>
-</ul>
+<div class="flex flex-wrap gap-2">
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Cross-Functional Leadership</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Stakeholder Management</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Team Building</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Mentorship</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Agile (Scrum, Kanban)</span>
+</div>
 </div>
 <div class="bg-white rounded-lg shadow-xl p-6">
 <h3 class="text-xl font-semibold text-gray-800 mb-4 flex items-center">
@@ -566,13 +566,13 @@ Leadership
 </svg>
 Analytical &amp; Research
 </h3>
-<ul class="list-disc list-inside text-gray-600 space-y-2">
-<li>Data-Driven</li>
-<li>User-Centric Design</li>
-<li>A/B Testing</li>
-<li>User Research</li>
-<li>Continuous Improvement</li>
-</ul>
+<div class="flex flex-wrap gap-2">
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Data-Driven</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">User-Centric Design</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">A/B Testing</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">User Research</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Continuous Improvement</span>
+</div>
 </div>
 <div class="bg-white rounded-lg shadow-xl p-6">
 <h3 class="text-xl font-semibold text-gray-800 mb-4 flex items-center">
@@ -581,15 +581,15 @@ Analytical &amp; Research
 </svg>
 Technical
 </h3>
-<ul class="list-disc list-inside text-gray-600 space-y-2">
-<li>AI</li>
-<li>LLM</li>
-<li>SQL</li>
-<li>API Development</li>
-<li>Integration</li>
-<li>Test-Driven Development (TDD)</li>
-<li>Behavior-Driven Development (BDD)</li>
-</ul>
+<div class="flex flex-wrap gap-2">
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">AI</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">LLM</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">SQL</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">API Development</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Integration</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Test-Driven Development (TDD)</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Behavior-Driven Development (BDD)</span>
+</div>
 </div>
 <div class="bg-white rounded-lg shadow-xl p-6 md:col-span-2">
 <h3 class="text-xl font-semibold text-gray-800 mb-4 flex items-center">
@@ -599,31 +599,31 @@ Technical
 </svg>
 Tools
 </h3>
-<ul class="list-disc list-inside text-gray-600 space-y-2 columns-2 md:columns-3 lg:columns-4">
-<li>Jira</li>
-<li>Confluence</li>
-<li>Trello</li>
-<li>Slack</li>
-<li>Github</li>
-<li>Pivotal Tracker</li>
-<li>Airtable</li>
-<li>InVision</li>
-<li>Figma</li>
-<li>Full Story</li>
-<li>Google Analytics</li>
-<li>Mixpanel</li>
-<li>Amplitude</li>
-<li>Looker</li>
-<li>Tableau</li>
-<li>Metabase</li>
-<li>LaunchDarkly</li>
-<li>Optimizely</li>
-<li>Zendesk</li>
-<li>SurveyMonkey</li>
-<li>ProductBoard</li>
-<li>ProductPlan</li>
-<li>Split.io</li>
-</ul>
+<div class="flex flex-wrap gap-2">
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Jira</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Confluence</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Trello</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Slack</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Github</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Pivotal Tracker</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Airtable</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">InVision</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Figma</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Full Story</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Google Analytics</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Mixpanel</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Amplitude</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Looker</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Tableau</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Metabase</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">LaunchDarkly</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Optimizely</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Zendesk</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">SurveyMonkey</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">ProductBoard</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">ProductPlan</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Split.io</span>
+</div>
 </div>
 </div>
 </div>
@@ -905,7 +905,7 @@ menu.classList.toggle('mobile-menu');
 document.addEventListener('click', (e) => {
 if (!menu.contains(e.target) && !menuToggle.contains(e.target)) {
 menu.classList.add('hidden');
-menu.classList.remove('flex', 'flex-col', 'absolute', 'top-full', 'right-0', 'bg-white', 'shadow-md', 'py-2',  'mobile-menu');
+menu.classList.remove('flex', 'flex-col', 'absolute', 'top-full', 'right-0', 'bg-white', 'shadow-md', 'py-2', 'mobile-menu');
 }
 });
 
