--- a/index.htm
+++ b/index.htm
@@ -524,7 +524,7 @@ ORACLE
 </div>
 </section>
 
-<section id="skills" class="py-20 bg-gradient-to-b from-purple-600 to-indigo-700">
+<section id="skills" class="py-20 gradient-bg-6">
 <div class="container mx-auto px-4">
 <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-white">Skills &amp; Expertise</h2>
 <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
