--- a/index.htm
+++ b/index.htm
@@ -7,24 +7,24 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
 html, body {
-    width: 100%;
-    overflow-x: hidden;
-    position: relative;
-    touch-action: pan-y;
-    -webkit-overflow-scrolling: touch;
+  width: 100%;
+  overflow-x: hidden;
+  position: relative;
+  touch-action: pan-y;
+  -webkit-overflow-scrolling: touch;
 }
 body {
-    font-family: 'Inter', sans-serif;
-    min-height: 100vh;
-    min-height: -webkit-fill-available;
+  font-family: 'Inter', sans-serif;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Inter', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 .location {
-    font-size: 0.9em;
-    color: #e6f7ff;
-    margin-top: 5px;
+  font-size: 0.9em;
+  color: #e6f7ff;
+  margin-top: 5px;
 }
 .gradient-bg-1 { background: linear-gradient(to bottom, #00a8ff, #205aff); }
 .gradient-bg-2 { background: linear-gradient(to bottom, #205aff, #4021ff); }
@@ -38,40 +38,40 @@ h1, h2, h3, h4, h5, h6 {
 .gradient-bg-10 { background: linear-gradient(to bottom, #ff1c7f, #ff3e4d); }
 .gradient-bg-11 { background: linear-gradient(to bottom, #ff3e4d, #ff6533); }
 .project-card {
-   transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
 }
 .project-card:hover {
   transform: scale(1.05);
   transition: transform 0.5s ease-in-out;
 }
 .lightbox {
-   display: none;
-   position: fixed;
-   z-index: 999;
-   top: 0;
-   left: 0;
-   right: 0;
-   bottom: 0;
-   background: rgba(0,0,0,0.8);
-   justify-content: center;
-   align-items: center;
+  display: none;
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0,0,0,0.8);
+  justify-content: center;
+  align-items: center;
 }
 .lightbox-content {
-   max-width: 90%;
-   max-height: 90%;
+  max-width: 90%;
+  max-height: 90%;
 }
 .lightbox-content img {
-   max-width: 100%;
-   max-height: 90vh;
-   object-fit: contain;
+  max-width: 100%;
+  max-height: 90vh;
+  object-fit: contain;
 }
 .close-lightbox {
-   position: absolute;
-   top: 20px;
-   right: 20px;
-   color: #fff;
-   font-size: 30px;
-   cursor: pointer;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  color: #fff;
+  font-size: 30px;
+  cursor: pointer;
 }
 .mobile-menu {
   text-align: right;
@@ -83,9 +83,9 @@ h1, h2, h3, h4, h5, h6 {
   backdrop-filter: blur(5px);
 }
 .container {
-   width: 100%;
-   max-width: 100%;
-   overflow-x: hidden;
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 </style>
 <!-- Favicon -->
@@ -134,32 +134,32 @@ y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
 </header>
 <main class="pt-16 overflow-x-hidden">
 <section id="hero" class="min-h-screen flex flex-col items-center justify-start pt-16 md:justify-center relative gradient-bg-1">
-  <div class="text-center mb-8 md:mb-12">
-      <h1 class="text-4xl font-bold text-white mb-2">Kevin Middleton</h1>
-      <p class="text-xl text-white">Full Stack Product Manager</p>
-      <div class="location">📍 New York City</div>
+<div class="text-center mb-8 md:mb-12">
+    <h1 class="text-4xl font-bold text-white mb-2">Kevin Middleton</h1>
+    <p class="text-xl text-white">Full Stack Product Manager</p>
+    <div class="location">📍 New York City</div>
+</div>
+<div class="text-center z-10 px-4 md:px-0">
+  <div class="flex justify-center space-x-4 items-center mb-8">
+    <a href="#experience" class="inline-flex items-center justify-center bg-white text-[#00a8ff] px-6 py-3 rounded-full hover:bg-gray-200 transition-colors">See My Work</a>
+    <a href="#about" class="inline-flex items-center justify-center bg-transparent text-white border-2 border-white px-6 py-3 rounded-full hover:bg-white hover:text-[#00a8ff] transition-colors">About Me</a>
   </div>
-  <div class="text-center z-10 px-4 md:px-0">
-    <div class="flex justify-center space-x-4 items-center mb-8">
-      <a href="#experience" class="inline-flex items-center justify-center bg-white text-[#00a8ff] px-6 py-3 rounded-full hover:bg-gray-200 transition-colors">See My Work</a>
-      <a href="#about" class="inline-flex items-center justify-center bg-transparent text-white border-2 border-white px-6 py-3 rounded-full hover:bg-white hover:text-[#00a8ff] transition-colors">About Me</a>
-    </div>
-    <div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-4 sm:p-6 md:p-8 mb-12">
-      <h2 class="text-lg sm:text-xl md:text-2xl lg:text-3xl font-bold mb-4 sm:mb-6 text-center text-white">
-        <span class="inline-block whitespace-nowrap text-[clamp(0.875rem,2vw,1.875rem)]">Building Consumer, Enterprise, and Platform SaaS Products</span>
-      </h2>
-      <p class="text-sm sm:text-base md:text-lg text-white leading-relaxed">
-        With 10+ years of experience driving product strategies, I turn complex challenges into scalable, data-driven solutions. My work spans diverse industries—social media, legal tech, marketing tech, HR, EdTech, and HVAC—delivering measurable growth and product success.
-      </p>
-    </div>
+  <div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-4 sm:p-6 md:p-8 mb-12">
+    <h2 class="text-lg sm:text-xl md:text-2xl lg:text-3xl font-bold mb-4 sm:mb-6 text-center text-white">
+      <span class="inline-block whitespace-nowrap text-[clamp(0.875rem,2vw,1.875rem)]">Building Consumer, Enterprise, and Platform SaaS Products</span>
+    </h2>
+    <p class="text-sm sm:text-base md:text-lg text-white leading-relaxed">
+      With 10+ years of experience driving product strategies, I turn complex challenges into scalable, data-driven solutions. My work spans diverse industries—social media, legal tech, marketing tech, HR, EdTech, and HVAC—delivering measurable growth and product success.
+    </p>
   </div>
-  <div class="w-full flex justify-center">
-    <div class="mt-4 md:absolute md:bottom-10 animate-bounce">
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3" />
-      </svg>
-    </div>
+</div>
+<div class="w-full flex justify-center">
+  <div class="mt-4 md:absolute md:bottom-10 animate-bounce">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3" />
+    </svg>
   </div>
+</div>
 </section>
 
 <section id="about" class="py-20 gradient-bg-2">
@@ -212,8 +212,8 @@ HVAC.COM
 <li><span class="font-semibold">Landing Pages:</span> Optimized landing pages to achieve a <strong>2.3% conversion rate</strong> to paid products.</li>
 </ul>
 <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mt-4">
-<img  src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Calculators-ugatTWPQjMXKJgaVhpaFvInZcvUTnG.png"   alt="HVAC.COM Calculators" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
-<img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/QuoteScore%20Landing%20Page-uuM6LcirnsW3dgC9uZ7IvQCkaH4o6t.png" alt="HVAC.COM QuoteScore Landing Page" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
+<img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Calculators-ugatTWPQjMXKJgaVhpaFvInZcvUTnG.png"   alt="HVAC.COM Calculators" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
+<img  src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/QuoteScore%20Landing%20Page-uuM6LcirnsW3dgC9uZ7IvQCkaH4o6t.png" alt="HVAC.COM QuoteScore Landing Page" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/video-CMzSXsw2YKljtBUuFMmwnpd5Vmbk7s.png" alt="HVAC.COM Video Content" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Replace%20Landing%20Page-3KAGV2Ct1GLuZUDCvnSCoy2zNnGaxf.png" alt="HVAC.COM Replace Landing Page" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
 </div>
@@ -389,10 +389,10 @@ ORACLE
 <div class="p-6">
 <h3 class="text-xl font-bold mb-2 text-gray-800">eGift Platform Expansion &amp; Square Partnership</h3>
 <p class="text-gray-600 mb-4">Drove <strong>23%</strong> U.S. and <strong>67%</strong> international growth by expanding Sendoso's eGift platform and partnering with Square to enable local eGifting in the U.S., Canada, Australia, and the U.K. Strengthened vendor relationships and enhanced platform security with fraud prevention measures.</p>
-<div class="flex flex-wrap">
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Market Expansion</span>
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Fraud Prevention</span>
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Global Partnerships</span>
+<div class="flex flex-wrap gap-2">
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Market Expansion</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Fraud Prevention</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Global Partnerships</span>
 </div>
 </div>
 </div>
@@ -401,12 +401,12 @@ ORACLE
 <div class="p-6">
 <h3 class="text-xl font-bold mb-2 text-gray-800">Org Chart Sync and Self-Serve Bulk Importer</h3>
 <p class="text-gray-600 mb-4">Launched Org Chart Sync for HRIS integration, improving user profiles and enabling org chart-aware proxy approval for requisitions, postings, and offers. Achieved a <strong>37% product engagement rate</strong> in the first quarter and improved Time to Hire and Time to Fill metrics, streamlining workflows and enhancing the overall user experience.</p>
-<div class="flex flex-wrap">
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">HRIS</span>
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Automation</span>
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Self-Serve</span>
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Workflows</span>
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">User Experience</span>
+<div class="flex flex-wrap gap-2">
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">HRIS</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Automation</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Self-Serve</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Workflows</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">User Experience</span>
 </div>
 </div>
 </div>
@@ -414,13 +414,13 @@ ORACLE
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Rocket%20Lawyer-rp4YsC8U09zO3ssfG9J781arqsI8gY.png" alt="Rocket Lawyer logo" class="w-full h-48 object-cover">
 <a href="https://middleton.io/rocketlawyer/" target="_blank" rel="noopener noreferrer" class="block p-6">
 <h3 class="text-xl font-bold mb-2 text-gray-800">Co-Branded Partner Sites</h3>
-<p class="text-gray-600 mb-4">Led the creation and launch of co-branded partner sites for Rocket Lawyer, integrating OpenID Connect authentication with customizable pricing, content, and features. This project accounte d for <strong>16% of European traffic</strong> and opened a new revenue channel.</p>
-<div class="flex flex-wrap">
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Growth</span>
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Partnerships</span>
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">API Development</span>
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Authentication</span>
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Internationalization</span>
+<p class="text-gray-600 mb-4">Led the creation and launch of co-branded partner sites for Rocket Lawyer, integrating OpenID Connect authentication with customizable pricing, content, and features. This project accounted for <strong>16% of European traffic</strong> and opened a new revenue channel.</p>
+<div class="flex flex-wrap gap-2">
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Growth</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Partnerships</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">API Development</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Authentication</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Internationalization</span>
 </div>
 </a>
 <div class="absolute bottom-2 right-2">
@@ -434,11 +434,11 @@ ORACLE
 <div class="p-6">
 <h3 class="text-xl font-bold mb-2 text-gray-800">Legal Document Conversion Rates</h3>
 <p class="text-gray-600 mb-4">Increased mobile gross conversions by <strong>5%</strong>, driving revenue growth in the legal document product line, which contributes <strong>90% of U.S. revenue</strong>. Achieved this through targeted A/B testing and strategic UX enhancements across mobile and desktop platforms.</p>
-<div class="flex flex-wrap">
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">A/B Testing</span>
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Conversion Optimization</span>
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Mobile Optimization</span>
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Revenue Growth</span>
+<div class="flex flex-wrap gap-2">
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">A/B Testing</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Conversion Optimization</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Mobile Optimization</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Revenue Growth</span>
 </div>
 </div>
 </div>
@@ -447,11 +447,11 @@ ORACLE
 <div class="p-6">
 <h3 class="text-xl font-bold mb-2 text-gray-800">Engage v2 and New Networks</h3>
 <p class="text-gray-600 mb-4">Led the development and launch of Oracle Social Cloud's v2 community management product, integrating LinkedIn, Instagram, Sina Weibo, and Tumblr to expand network coverage. Launched <strong>36 features</strong> in one year and doubled network reach, significantly enhancing customer satisfaction and platform adoption.</p>
-<div class="flex flex-wrap">
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Product Strategy</span>
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Integrations</span>
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Cross-Functional Leadership</span>
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Customer Satisfaction</span>
+<div class="flex flex-wrap gap-2">
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Product Strategy</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Integrations</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Cross-Functional Leadership</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Customer Satisfaction</span>
 </div>
 </div>
 </div>
@@ -460,11 +460,11 @@ ORACLE
 <div class="p-6">
 <h3 class="text-xl font-bold mb-2 text-gray-800">AI-Powered Learning Platform</h3>
 <p class="text-gray-600 mb-4">Led the development of AI-powered educational tools, a Mac app and a web-based chatbot, to deliver personalized learning experiences. Drove <strong>700% user growth</strong> post-launch.</p>
-<div class="flex flex-wrap">
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">AI</span>
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Product Strategy</span>
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">User Research</span>
-<span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Growth</span>
+<div class="flex flex-wrap gap-2">
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">AI</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Product Strategy</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">User Research</span>
+<span class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full text-sm">Growth</span>
 </div>
 </div>
 </div>
