--- a/index.htm
+++ b/index.htm
@@ -87,6 +87,26 @@ h1, h2, h3, h4, h5, h6 {
   max-width: 100%;
   overflow-x: hidden;
 }
+.headline-container {
+  width: 100%;
+  overflow: hidden;
+  padding: 0 1rem;
+}
+.headline-text {
+  display: inline-block;
+  white-space: nowrap;
+  font-size: clamp(0.875rem, 1.5vw, 1.875rem);
+  max-width: 100%;
+}
+@media (min-width: 1920px) {
+  .headline-container {
+    max-width: 1400px;
+    margin: 0 auto;
+  }
+  .headline-text {
+    font-size: 1.5rem;
+  }
+}
 </style>
 <!-- Favicon -->
 <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -133,35 +153,36 @@ y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
 </nav>
 </header>
 <main class="pt-16 overflow-x-hidden">
-<section id="hero" class="min-h-screen flex flex-col items-center justify-start pt-16 md:justify-center relative gradient-bg-1">
-<div class="text-center mb-8 md:mb-12">
-    <h1 class="text-4xl font-bold text-white mb-2">Kevin Middleton</h1>
-    <p class="text-xl text-white">Full Stack Product Manager</p>
-    <div class="location">📍 New York City</div>
-</div>
-<div class="text-center z-10 px-4 md:px-0">
-  <div class="flex justify-center space-x-4 items-center mb-8">
-    <a href="#experience" class="inline-flex items-center justify-center bg-white text-[#00a8ff] px-6 py-3 rounded-full hover:bg-gray-200 transition-colors">See My Work</a>
-    <a href="#about" class="inline-flex items-center justify-center bg-transparent text-white border-2 border-white px-6 py-3 rounded-full hover:bg-white hover:text-[#00a8ff] transition-colors">About Me</a>
-  </div>
-  <div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-4 sm:p-6 md:p-8 mb-12">
-    <h2 class="text-lg sm:text-xl md:text-2xl lg:text-3xl font-bold mb-4 sm:mb-6 text-center text-white">
-      <span class="inline-block whitespace-nowrap text-[clamp(0.875rem,2vw,1.875rem)]">Building Consumer, Enterprise, and Platform SaaS Products</span>
-    </h2>
-    <p class="text-sm sm:text-base md:text-lg text-white leading-relaxed">
-      With 10+ years of experience driving product strategies, I turn complex challenges into scalable, data-driven solutions. My work spans diverse industries—social media, legal tech, marketing tech, HR, EdTech, and HVAC—delivering measurable growth and product success.
-    </p>
-  </div>
-</div>
-<div class="w-full flex justify-center">
-  <div class="mt-4 md:absolute md:bottom-10 animate-bounce">
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3" />
-    </svg>
-  </div>
-</div>
+<section id="hero" class="min-h-screen md:min-h-[80vh] flex flex-col items-center justify-start pt-16 md:pt-8 md:justify-center relative gradient-bg-1">
+    <div class="text-center mb-4 md:mb-6">
+      <h1 class="text-4xl font-bold text-white mb-2">Kevin Middleton</h1>
+      <p class="text-xl text-white">Full Stack Product Manager</p>
+      <div class="location">📍 New York City</div>
+    </div>
+    <div class="text-center z-10 px-4 md:px-0 w-full max-w-5xl mx-auto">
+      <div class="flex justify-center space-x-4 items-center mb-4 md:mb-6">
+        <a href="#experience" class="inline-flex items-center justify-center bg-white text-[#00a8ff] px-6 py-3 rounded-full hover:bg-gray-200 transition-colors">See My Work</a>
+        <a href="#about" class="inline-flex items-center justify-center bg-transparent text-white border-2 border-white px-6 py-3 rounded-full hover:bg-white hover:text-[#00a8ff] transition-colors">About Me</a>
+      </div>
+      <div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-3 sm:p-4 md:p-6 mb-8">
+        <h2 class="text-lg sm:text-xl md:text-2xl lg:text-3xl font-bold mb-4 sm:mb-6 text-center text-white">
+          <div class="headline-container">
+            <span class="headline-text">Building Consumer, Enterprise, and Platform SaaS Products</span>
+          </div>
+        </h2>
+        <p class="text-sm sm:text-base md:text-lg text-white leading-relaxed">
+          With 10+ years of experience driving product strategies, I turn complex challenges into scalable, data-driven solutions. My work spans diverse industries—social media, legal tech, marketing tech, HR, EdTech, and HVAC—delivering measurable growth and product success.
+        </p>
+      </div>
+      <div class="w-full flex justify-center">
+        <div class="mt-2 md:absolute md:bottom-4 animate-bounce">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3" />
+          </svg>
+        </div>
+      </div>
+    </div>
 </section>
-
 <section id="about" class="py-20 gradient-bg-2">
 <div class="container mx-auto px-4">
 <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-white">About Me</h2>
