--- a/index.htm
+++ b/index.htm
@@ -262,9 +262,8 @@
                     <a href="#experience"
                         class="inline-block bg-white text-blue-500 px-6 py-3 rounded-full hover:bg-gray-200 transition-colors">See
                         My Work</a>
-                    <a href="#about"
-                        class="inline-flex items-center justify-center bg-transparent text-white border-2 border-white px-6 py-3 rounded-full hover:bg-white hover:text-[#00a8ff] transition-colors">About
-                        Me</a>
+                    <a href="#about" class="inline-block bg-transparent text-white border-2 border-white px-6 py-3 rounded-full hover:bg-white hover:text-blue-500 hover:border-blue-500 transition-colors">
+                        About Me</a>
                 </div>
                 <div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-3 sm:p-4 md:p-6 mb-8">
                     <h2 class="font-bold mb-4 sm:mb-6 text-center text-white overflow-hidden" style="height: 3rem;">
