--- a/index.htm
+++ b/index.htm
@@ -251,20 +251,22 @@
     </header>
     <main class="pt-16 overflow-x-hidden">
         <section id="hero"
-            class="min-h-screen md:min-h-[80vh] flex flex-col items-center justify-start pt-16 md:pt-8 md:justify-center relative gradient-bg-1">
-            <div class="text-center mb-4 md:mb-6">
+            class="min-h-screen flex flex-col items-center justify-start pt-16 md:pt-0 md:justify-start relative gradient-bg-1">
+            <div class="text-center mb-4 md:mb-6 md:mt-20">
                 <h1 class="text-4xl font-bold text-white mb-2">Kevin Middleton</h1>
                 <p class="text-xl text-white">Full Stack Product Manager</p>
                 <div class="text-sm text-white mt-2">📍 New York City</div>
             </div>
-            <div class="text-center z-10 px-4 md:px-0 w-full max-w-5xl mx-auto">
+            <div class="text-center z-10 px-4 md:px-0 w-full max-w-5xl mx-auto mb-16">
                 <div class="flex justify-center space-x-4 items-center mb-4 md:mb-6">
                     <a href="#experience"
-                        class="inline-flex items-center justify-center bg-white text-[#00a8ff] px-6 py-3 rounded-full hover:bg-gray-200 transition-colors">See
-                        My Work</a>
+                        class="inline-flex items-center justify-center bg-white text-blue-500 px-6 py-3 rounded-full hover:bg-gray-200 transition-colors">
+                        See My Work
+                    </a>
                     <a href="#about"
-                        class="inline-flex items-center justify-center bg-transparent text-white border-2 border-white px-6 py-3 rounded-full hover:bg-white hover:text-[#00a8ff] transition-colors">About
-                        Me</a>
+                        class="inline-flex items-center justify-center bg-transparent text-white border-2 border-white px-6 py-3 rounded-full hover:bg-white hover:text-blue-500 transition-colors">
+                        About Me
+                    </a>
                 </div>
                 <div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-3 sm:p-4 md:p-6 mb-8">
                     <h2 class="font-bold mb-4 sm:mb-6 text-center text-white overflow-hidden" style="height: 3rem;">
@@ -280,8 +282,8 @@
                         marketing tech, HR, EdTech, and HVAC—delivering measurable growth and product success.
                     </p>
                 </div>
-                <div class="w-full flex justify-center">
-                    <div class="mt-2 md:absolute md:bottom-16 animate-bounce">
+                <div class="w-full flex justify-center mb-8">
+                    <div class="animate-bounce">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white" fill="none"
                             viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
